manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: longhorn-ingress
    namespace: longhorn
spec:
    rules:
        - host: longhorn.trueberryless.org
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: longhorn-ui
                            port:
                                number: 80

    tls:
        - hosts:
              - longhorn.trueberryless.org
          secretName: longhorn
